# obsidian-fast-stats

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  manifest-beta.json  manifest.json  package.json  versions.json
.github/workflows/: release.yml
scripts/: build-lib.ts  build-wasm.ts  build.ts  create-ci-artefacts.ts  dev.ts  tsconfig.json
scripts/utils/: InlineWasmBunPlugin.ts  build.ts
src/: CustomStatType.ts  ExprParser.ts  FastStatsSettings.ts  FastStatsSettingsTab.ts  StatReport.ts  StatReportFactory.ts  StatusBarEditorPlugin.ts  lib.ts  main.ts
src/api/: api.d.ts  api.ts
src/rust/: console_log.rs  lib.rs  parser.rs
